--- a/src/app/database/database.component.html
+++ b/src/app/database/database.component.html
@@ -1,4 +1,24 @@
-<!-- Bootstrap - CSS -->
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<div class = "container text-center mt-5">
+	<h1 class = "display-4">You can't have a good skincare regimen without picking the right products.</h1>
+</div>
 
-<p>database works!</p>
+<div class = "container mt-5">
+	<table class = "table table-hover text-center">
+  		<thead class = "thead-dark">
+    		<tr>
+		      <th scope = "col">Name</th>
+		      <th scope = "col">Brand</th>
+		      <th scope = "col">Category</th>
+		      <th scope = "col">Description</th>
+    		</tr>
+  		</thead>
+  		<tbody>
+		    <tr *ngFor = "let p of products">
+		      <th scope = "row">{{p.name}}</th>
+		      <td>{{p.brand}}</td>
+		      <td>{{p.category}}</td>
+		      <td>{{p.description}}</td>
+		    </tr>
+  		</tbody>
+	</table>
+</div>
