--- a/src/app/quiz/quiz.component.html
+++ b/src/app/quiz/quiz.component.html
@@ -1,7 +1,4 @@
-<!-- Bootstrap - CSS -->
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-<div class = "container text-center" id = "quiz">
+<div class = "container text-center mt-5" id = "quiz">
     <h1 class = "display-4">Taking care of your skin starts with learning about it.</h1>
     <br><button (click) = "showQuiz()" class = "btn btn-secondary">Start</button>
 </div>
